# dkms-demo

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
config/: messagebox.yml  watcher.yml  witness1.yml  witness2.yml  witness3.yml
controller2_mobile_app/: README.md  pubspec.yaml
controller2_mobile_app/assets/: passport_layout2.json  passport_template2.json
controller2_mobile_app/lib/: former.dart  main.dart  scanner.dart
dkms-dev-cli/: Cargo.toml
dkms-dev-cli/src/: init.rs  kel.rs  keri.rs  main.rs  mesagkesto.rs  resolve.rs  said.rs  seed.rs  sign.rs  tel.rs  temporary_id.rs  utils.rs
events/identifier1/: kel  mailbox_qry_1
events/identifier2/: kel  mailbox_qry_0  mailbox_qry_1  oobi0  oobi1
helm/dkms-demo/: Chart.yaml  values.yaml
helm/dkms-demo/templates/: _helpers.tpl  mesagkesto-configmap.yaml  mesagkesto-deployment.yaml  mesagkesto-service.yaml  watcher-configmap.yaml  watcher-deployment.yaml  watcher-pvc.yaml  watcher-service.yaml  witness-configmap.yaml  witness-deployment.yaml  witness-pvc.yaml  witness-service.yaml
helm/mesagkesto/: Chart.yaml  values.yaml
helm/mesagkesto/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
helm/watcher/: Chart.yaml  values.yaml
helm/watcher/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
helm/witness/: Chart.yaml  values.yaml
helm/witness/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
infrastructure/: .env.example  configure.sh  docker-compose.yml  watcher.yml  witness2.yml  witness3.yml
infrastructure/config/: messagebox.yml.tmpl  watcher.yml  watcher.yml.tmpl  witness1.yml  witness1.yml.tmpl  witness2.yml.tmpl  witness3.yml.tmpl
keri-cli/: Cargo.toml
keri-cli/src/: init.rs  issue.rs  kel.rs  keri.rs  main.rs  mesagkesto.rs  resolve.rs  said.rs  sign.rs  tel.rs  utils.rs
scripts/: README.md  convertForSign.sh  oobiToBase64Safe.sh  pam-keri_issue.sh  pamkeri_config.yaml  retriveOOBIFromDomain.sh  test.sh  test_get_kel.sh  test_issue.sh  test_mesagekesto.sh  test_sad.sh  verifyMultisig.sh
scripts/get_kel_test/: bobs_config.yaml  test_get_kel.sh  test_get_rotated_kel.sh
scripts/pamkeri/: init_issuer.sh  issue.sh  pamkeri_config.yaml
scripts/rotate_witness/: rotate_witness.sh  rotation_config.yaml
src/: api.rs  handlers.rs  init.rs  issue.rs  keri.rs  main.rs  mesagkesto.rs  resolve.rs  utils.rs
test-vectors/: README.md  dkms.sh  test_issue.sh  test_multisig.sh  test_multisig_issue.sh  test_sad.sh  test_sign.sh  test_verify.sh
test-vectors/get_kel_test/: alice_config.yaml  test_get_kel.sh  test_get_rotated_kel.sh
test-vectors/pamkeri/: pamkeri_config.yaml
test-vectors/rotate_witness/: rotate_witness.sh  rotation_config.yaml.tmpl
test_data_generator/: Cargo.toml
test_data_generator/src/: main.rs
