[package]
name = "dkms-dev-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keri-core = { path = "../../keriox/keriox_core", version = "0.9.0", features = ["oobi", "mailbox"]}
keri-controller = { path = "../../keriox/components/controller", version = "0.1.1" }
said = { version = "0.4.0", features = ["macros"]} 
cesrox = { version = "0.1.4", features = ["cesr-proof"] }
anyhow = { version = "1.0" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.14.0", features = ["rt", "macros", "rt-multi-thread"] }
acdc = {git = "https://github.com/THCLab/acdc-rust"}
messagebox = { path = "../../mesagkesto/messagebox" }
reqwest =  { version = "0.11.22"}
clap = { version = "4.4.8", features = ["derive"] }
config-file = "0.2.3"
ed25519-dalek = {version = "2.1.0", features = ["rand_core"] }
rand = "0.8.5"
thiserror = "1.0.50"
url = "2.4.1"
home = "0.5.5"
indexmap = { version = "2.1.0", features = ["serde"]}
figment = {version="0.10.14", features = ["yaml"]}

[dev_dependencies]
tempfile = "3.10.0"
