[package]
name = "keri-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.8"
keri = { git = "https://github.com/THCLab/keriox.git", features = ["oobi", "mailbox"]}
controller = { git = "https://github.com/THCLab/keriox.git" }
said = { git = "https://github.com/THCLab/cesrox", branch = "macros", features = ["macros"]} 
cesrox = { git = "https://github.com/THCLab/cesrox", features = ["cesr-proof"], tag = "v0.1.4" }
anyhow = { version = "1.0" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.14.0", features = ["rt", "macros", "rt-multi-thread"] }
acdc = {git = "https://github.com/THCLab/acdc-rust"}
messagebox = { path = "../../mesagkesto/messagebox" }
reqwest =  { version = "0.11.22"}
clap = { version = "4.4.8", features = ["derive"] }
config-file = "0.2.3"
ed25519-dalek = {version = "2.1.0", features = ["rand_core"] }
rand = "0.8.5"
thiserror = "1.0.50"
url = "2.4.1"
home = "0.5.5"
